fix:z-index to top button

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ html {
 
 .top_button {
   text-decoration: none;
+  z-index: 100;
   letter-spacing: 0rem;
   font-weight: 100;
   font-size: 1rem;
